matched books without alignment fix

--- a/src/styles/matchedbooks.scss
+++ b/src/styles/matchedbooks.scss
@@ -160,9 +160,22 @@
   overflow-wrap: break-word;
 }
 h2.ant-typography,
-.ant-typography h2 {
+.ant-typography h2,
+h3.ant-typography,
+.ant-typography h3,
+h4.ant-typography,
+.ant-typography h4,
+h5.ant-typography,
+.ant-typography h5 {
   color: $white;
+  margin-bottom: 2;
+}
+.ant-typography kbd {
+  font-size: 120%;
+  color: $white;
+}
+.align-center
+{
   text-align: center;
-  margin-bottom: 0;
 }
 }
